--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 
                     <div class="first-img">
-                        <img src="/images/main-camera.png" alt="">
+                        <img src="./images/main-camera.png" alt="">
                     </div>
 
 
@@ -69,13 +69,13 @@
                 <hr>
                 
                 <div class="thumnail">
-                    <img src="/logos/Alibaba.svg" alt="">
-                    <img src="/logos/Amazon.svg" alt="">
-                    <img src="/logos/Daraz.pk Logo.svg" alt="">
-                    <img src="/logos/Ebay.svg" alt="">
-                    <img src="/logos/Rakuten.svg" alt="">
-                    <img src="/logos/Target.svg" alt="">
-                    <img src="/logos/Walmart.svg" alt="">
+                    <img src="./logos/Alibaba.svg" alt="">
+                    <img src="./logos/Amazon.svg" alt="">
+                    <img src="./logos/Daraz.pk Logo.svg" alt="">
+                    <img src="./logos/Ebay.svg" alt="">
+                    <img src="./logos/Rakuten.svg" alt="">
+                    <img src="./logos/Target.svg" alt="">
+                    <img src="./logos/Walmart.svg" alt="">
                 </div>
 
                 <div class="hr2">
@@ -101,7 +101,7 @@
 
 
                     <div class="item-banner">
-                        <img src="/images/tripod.png" alt="">
+                        <img src="./images/tripod.png" alt="">
                     </div>
 
                     <div class="item-detail">
@@ -139,7 +139,7 @@
 
 
                     <div class="item-banner">
-                        <img src="/images/action.png" alt="">
+                        <img src="./images/action.png" alt="">
                     </div>
 
                     <div class="item-detail">
@@ -174,7 +174,7 @@
 
 
                     <div class="item-banner">
-                        <img src="/images/airpod.png" alt="">
+                        <img src="./images/airpod.png" alt="">
                     </div>
 
                     <div class="item-detail">
@@ -209,7 +209,7 @@
 
 
                     <div class="item-banner">
-                        <img src="/images/camera.png" alt="">
+                        <img src="./images/camera.png" alt="">
                     </div>
 
                     <div class="item-detail">
@@ -241,7 +241,7 @@
 
 
                     <div class="item-banner">
-                        <img src="/images/drone.png" alt="">
+                        <img src="./images/drone.png" alt="">
                     </div>
 
                     <div class="item-detail">
@@ -273,7 +273,7 @@
 
 
                     <div class="item-banner">
-                        <img src="/images/single-light.png" alt="">
+                        <img src="./images/single-light.png" alt="">
                     </div>
 
                     <div class="item-detail">
@@ -305,7 +305,7 @@
 
 
                     <div class="item-banner">
-                        <img src="/images/setup.png" alt="">
+                        <img src="./images/setup.png" alt="">
                     </div>
 
                     <div class="item-detail">
@@ -337,7 +337,7 @@
 
 
                     <div class="item-banner">
-                        <img src="/images/mic.png" alt="">
+                        <img src="./images/mic.png" alt="">
                     </div>
 
                     <div class="item-detail">
@@ -370,7 +370,7 @@
 
 
                     <div class="item-banner">
-                        <img src="/images/single-light.png" alt="">
+                        <img src="./images/single-light.png" alt="">
                     </div>
 
                     <div class="item-detail">
@@ -410,7 +410,7 @@
 
         <section class="container3">
 
-            <img src="/images/gear.png" alt="">
+            <img src="./images/gear.png" alt="">
             <div class="middle-footer">
                 <h3 class="middle-footer-title">Featured products at one place</h3>
 
